# services/district.go
@@ -1,6 +1,9 @@
 package services
 
 import (
+	"fmt"
+	"net/http"
+
 	"github.com/gofiber/fiber/v2"
 	"omsoft.com/addressapi/database"
 	"omsoft.com/addressapi/models"
@@ -14,11 +17,17 @@ import (
 // @Produce json
 // @Success 200 {object} models.ResponseHTTP{data=[]models.District}
 // @Failure 503 {object} models.ResponseHTTP{}
-// @Router /api/v1/districts [get]
+// //districts [get]
 func GetDistricts(c *fiber.Ctx) error {
 	db := database.DBConn
 	var districts []models.District
-	db.Find(&districts)
+	if res := db.Find(&districts); res.Error != nil {
+		return c.Status(http.StatusServiceUnavailable).JSON(models.ResponseHTTP{
+			Success: false,
+			Message: res.Error.Error(),
+			Data:    nil,
+		})
+	}
 	return c.JSON(models.ResponseHTTP{
 		Success: true,
 		Message: "Success get all districts.",
@@ -36,12 +45,28 @@ func GetDistricts(c *fiber.Ctx) error {
 // @Success 200 {object} models.ResponseHTTP{data=[]models.District}
 // @Failure 503 {object} models.ResponseHTTP{}
 // @Failure 404 {object} models.ResponseHTTP{}
-// @Router /api/v1/districts/amphure/{amphure_id} [get]
+// @Router /districts/amphure/{amphure_id} [get]
 func GetDistrictsByAmphureID(c *fiber.Ctx) error {
 	amphureID := c.Params("amphure_id", "0")
 	db := database.DBConn
 	var districts []models.District
-	db.Debug().Where("amphure_id = ?", amphureID).Find(&districts)
+	if err := db.Where("amphure_id = ?", amphureID).Find(&districts).Error; err != nil {
+		switch err.Error() {
+		case "record not found":
+			return c.Status(http.StatusNotFound).JSON(models.ResponseHTTP{
+				Success: false,
+				Message: fmt.Sprintf("Districts with Amphure ID %v not found.", amphureID),
+				Data:    nil,
+			})
+		default:
+			return c.Status(http.StatusServiceUnavailable).JSON(models.ResponseHTTP{
+				Success: false,
+				Message: err.Error(),
+				Data:    nil,
+			})
+
+		}
+	}
 	return c.JSON(models.ResponseHTTP{
 		Success: true,
 		Message: "Success get all districts.",
